No spellcheck on bookmarks editor + Settings can now overflow correctly

--- a/extension/public/css/footer.scss
+++ b/extension/public/css/footer.scss
@@ -23,10 +23,8 @@ footer {
         position: fixed;
         bottom: 0;
         left: 0;
-        width: 100%;
-        height: 100%;
-        max-width: 100%;
-        max-height: 100%;
+        width: 100vw;
+        height: 100vh;
         border-radius: 0;
         z-index: 2;
         background-color: var(--homepage-bg-tertiary) !important;
